<resources>
    <string name="app_name">QuizPrimero</string>
    <string name="tittle_proyect">QuizPrimero</string>
    <string name="search">busqueda</string>
    <string name="more">Mas opciones</string>
    <string name="financiar">FINANCIAR</string>
    <string name="monto">$7.963.420</string>
    <string name="fecha">Mar. 15 - 22 , 2018</string>
    <string name="ingresos">Ingresos</string>
    <string name="procentajeZ">+13%</string>
    <string name="valor_ingreso">$1.173.000</string>
    <string name="historial">Historial</string>
</resources>
