<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.camilolozano.quizcamilolozanodeleoni023111.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/backgroundindex"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/txt_financiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/financiar"
                android:textSize="25sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhiteText"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt_monto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monto"
                android:textSize="35sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhiteText"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:layout_below="@+id/txt_financiar"
                />

            <TextView
                android:id="@+id/txt_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhiteText"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:layout_below="@+id/txt_monto"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

           <RelativeLayout
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               >

               <TextView
                   android:id="@+id/ingresos"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ingresos"
                   android:textColor="@color/colorPrimary"
                   android:layout_above="@+id/montoingreso"
                   android:layout_alignLeft="@+id/montoingreso"
                   />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@drawable/back_blue"
                   android:text="@string/procentajeZ"
                   android:textColor="@color/colorWhiteText"
                   android:paddingLeft="5dp"
                   android:paddingRight="5dp"
                   />

               <TextView
                   android:id="@+id/montoingreso"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/valor_ingreso"
                   android:textColor="@color/colorPrimary"
                   android:layout_centerHorizontal="true"
                   android:layout_centerVertical="true"
                   android:textStyle="bold"
                   android:textSize="20sp"

                   />

           </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/plus"

        android:layout_margin="16dp"/>
</android.support.design.widget.CoordinatorLayout>
